Fixed minor overflow bug.

--- a/server/public/CSS/Pages/portfolio.css
+++ b/server/public/CSS/Pages/portfolio.css
@@ -262,10 +262,6 @@
         top: 1rem;
     }
 
-    .card-g {
-        width: 100%;
-    }
-
     .close-project {
         z-index: 20;
         top: 2.2rem;
